Shenandoah: More asserts around code roots

XMLWordPrintable

    • gc
    • b07
    • generic
    • generic

        We are still observing occasional corrupted code roots in Traversal GC. The assert always happens in code roots, and always at init-traversal. There are two ways this seems likely to happen: either when new code is generated, or during the previous GC cycle. We should plant some verifications there to ensure we fail earlier.

              Assignee:
              Roman Kennke
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: