8237543: Shenandoah: More asserts around code roots

Reviewed-by: zgu