src/hotspot/share/gc/shenandoah/shenandoahTraversalGC.hpp
@@ -69,6 +69,7 @@ private:
   void weak_refs_work_doit();
 
   void fixup_roots();
+  void verify_roots_after_gc();
 };
 
 #endif // SHARE_GC_SHENANDOAH_SHENANDOAHTRAVERSALGC_HPP
